--- a/the-lyrics.html
+++ b/the-lyrics.html
@@ -60,13 +60,18 @@
 
             <!-- Lyrics Header -->
             <section class="lyrics-header">
-                <div class="lyrics-title-section">
-                    <h1 class="lyrics-page-title">The Lyrics</h1>
-                    <div class="song-meta">
-                        <h2 class="song-title">The Mingle Effect</h2>
-                        <p class="song-subtitle">(Ode to Michael)</p>
-                        <p class="song-author">By Derek Devon</p>
-                        <p class="song-credit">Author of "A Letter Guide For Rebecca"</p>
+                <div class="lyrics-header-content">
+                    <div class="lyrics-title-section">
+                        <h1 class="lyrics-page-title">The Lyrics</h1>
+                        <div class="song-meta">
+                            <h2 class="song-title">The Mingle Effect</h2>
+                            <p class="song-subtitle">(Ode to Michael)</p>
+                            <p class="song-author">By Derek Devon</p>
+                            <p class="song-credit">Author of "A Letter Guide For Rebecca"</p>
+                        </div>
+                    </div>
+                    <div class="header-image">
+                        <img src="images/young-person-headphones.jpg" alt="Young person with headphones representing digital connection" class="header-img">
                     </div>
                 </div>
             </section>
@@ -170,6 +175,19 @@
                         </div>
                     </div>
 
+                </div>
+            </section>
+
+            <!-- Vinyl Record Section -->
+            <section class="vinyl-section">
+                <div class="vinyl-container">
+                    <div class="vinyl-image">
+                        <img src="images/vinyl-record.jpg" alt="The Mingle Effect Vinyl Record" class="vinyl-img">
+                    </div>
+                    <div class="vinyl-text">
+                        <h3>Available in Classic Vinyl</h3>
+                        <p>Experience "The Mingle Effect" the way music was meant to be heard - with warmth, depth, and that authentic analog connection that brings people together.</p>
+                    </div>
                 </div>
             </section>
         </div>
