--- a/the-lyrics.html
+++ b/the-lyrics.html
@@ -60,18 +60,13 @@
 
             <!-- Lyrics Header -->
             <section class="lyrics-header">
-                <div class="lyrics-header-content">
-                    <div class="lyrics-title-section">
-                        <h1 class="lyrics-page-title">The Lyrics</h1>
-                        <div class="song-meta">
-                            <h2 class="song-title">The Mingle Effect</h2>
-                            <p class="song-subtitle">(Ode to Michael)</p>
-                            <p class="song-author">By Derek Devon</p>
-                            <p class="song-credit">Author of "A Letter Guide For Rebecca"</p>
-                        </div>
-                    </div>
-                    <div class="header-image">
-                        <img src="images/young-person-headphones.jpg" alt="Young person with headphones representing digital connection" class="header-img">
+                <div class="lyrics-title-section">
+                    <h1 class="lyrics-page-title">The Lyrics</h1>
+                    <div class="song-meta">
+                        <h2 class="song-title">The Mingle Effect</h2>
+                        <p class="song-subtitle">(Ode to Michael)</p>
+                        <p class="song-author">By Derek Devon</p>
+                        <p class="song-credit">Author of "A Letter Guide For Rebecca"</p>
                     </div>
                 </div>
             </section>
@@ -80,13 +75,18 @@
             <section class="lyrics-content">
                 <div class="lyrics-container">
                     
-                    <div class="verse-section">
-                        <div class="verse-label">Verse 1</div>
-                        <div class="verse-text">
-                            <p>Heads down, thumbs tappin', eyes glued to the screen</p>
-                            <p>Another notification, a like, a meme unseen</p>
-                            <p>The world's a blur of filters, a curated show</p>
-                            <p>But real connection's fading, where did the good times go?</p>
+                    <div class="verse-section verse-with-image">
+                        <div class="verse-content">
+                            <div class="verse-label">Verse 1</div>
+                            <div class="verse-text">
+                                <p>Heads down, thumbs tappin', eyes glued to the screen</p>
+                                <p>Another notification, a like, a meme unseen</p>
+                                <p>The world's a blur of filters, a curated show</p>
+                                <p>But real connection's fading, where did the good times go?</p>
+                            </div>
+                        </div>
+                        <div class="verse-image">
+                            <img src="images/young-person-headphones.jpg" alt="Young person with headphones representing digital connection" class="verse-img">
                         </div>
                     </div>
 
@@ -102,13 +102,18 @@
                         </div>
                     </div>
 
-                    <div class="verse-section">
-                        <div class="verse-label">Verse 2</div>
-                        <div class="verse-text">
-                            <p>Unplug, step outside, feel the sun on your face</p>
-                            <p>Reconnect with humanity, find your rightful place</p>
-                            <p>There's a world out there, waiting to be known</p>
-                            <p>Let's mingle, let's laugh, let the seeds be sown</p>
+                    <div class="verse-section verse-with-image">
+                        <div class="verse-content">
+                            <div class="verse-label">Verse 2</div>
+                            <div class="verse-text">
+                                <p>Unplug, step outside, feel the sun on your face</p>
+                                <p>Reconnect with humanity, find your rightful place</p>
+                                <p>There's a world out there, waiting to be known</p>
+                                <p>Let's mingle, let's laugh, let the seeds be sown</p>
+                            </div>
+                        </div>
+                        <div class="verse-image">
+                            <img src="images/vinyl-record.jpg" alt="Vinyl record representing authentic connection" class="verse-img">
                         </div>
                     </div>
 
@@ -175,19 +180,6 @@
                         </div>
                     </div>
 
-                </div>
-            </section>
-
-            <!-- Vinyl Record Section -->
-            <section class="vinyl-section">
-                <div class="vinyl-container">
-                    <div class="vinyl-image">
-                        <img src="images/vinyl-record.jpg" alt="The Mingle Effect Vinyl Record" class="vinyl-img">
-                    </div>
-                    <div class="vinyl-text">
-                        <h3>Available in Classic Vinyl</h3>
-                        <p>Experience "The Mingle Effect" the way music was meant to be heard - with warmth, depth, and that authentic analog connection that brings people together.</p>
-                    </div>
                 </div>
             </section>
         </div>
