--- a/whos-derek.html
+++ b/whos-derek.html
@@ -55,7 +55,7 @@
                     <div class="timeline-content">
                         <div class="timeline-card">
                             <h3>The Spark: TC After Dark</h3>
-                            <p>Near the end of the Covid pandemic, Derek discovered Teresa "TC" Scornavacchi's podcast "TC After Dark". Episode 79: "How to write a book" changed everything.</p>
+                            <p>Near the end of the Covid pandemic, Derek discovered Teresa "TC" Cannon's podcast "TC After Dark". Episode 79: "How to write a book" changed everything.</p>
                             <div class="timeline-quote">
                                 "It motivated me to get off my hockey player butt and start writing 'My Book'!"
                             </div>
