--- a/mingle-project.html
+++ b/mingle-project.html
@@ -51,6 +51,20 @@
                     <a href="#take-action" class="btn-primary">Join the Movement</a>
                     <a href="https://www.smerconish.com/mingle-project/" target="_blank" class="btn-secondary">Visit Official Site</a>
                 </div>
+                
+                <div class="mingle-video">
+                    <h3>Watch: The Mingle Movie</h3>
+                    <div class="video-container">
+                        <iframe 
+                            src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
+                            title="The Mingle Movie (Feature Film) by Michael Smerconish"
+                            frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                    <p class="video-description">Michael Smerconish's complete presentation on The Mingle Project</p>
+                </div>
                 <div class="scroll-indicator">
                     <span>Discover the Crisis</span>
                     <div class="scroll-arrow">↓</div>
