--- a/mingle-project.html
+++ b/mingle-project.html
@@ -7,6 +7,45 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mingle-project.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+<style>
+/* TEMPORARY DEBUG CSS - HIGHEST SPECIFICITY */
+.mingle-hero .hero-content .hero-layout {
+    display: grid !important;
+    grid-template-columns: 1fr 1.2fr !important;
+    gap: 80px !important;
+    align-items: center !important;
+    margin-bottom: 60px !important;
+    width: 100% !important;
+}
+
+.mingle-hero .hero-content .hero-left {
+    text-align: left !important;
+}
+
+.mingle-hero .hero-content .hero-right {
+    text-align: center !important;
+}
+
+.mingle-hero .video-container {
+    position: relative !important;
+    width: 100% !important;
+    max-width: 600px !important;
+    margin: 0 auto 20px !important;
+    padding-bottom: 33.75% !important;
+    height: 0 !important;
+    border-radius: 15px !important;
+    overflow: hidden !important;
+    box-shadow: 0 15px 40px rgba(0, 0, 0, 0.4) !important;
+    border: 3px solid rgba(255, 255, 255, 0.3) !important;
+}
+
+.mingle-hero .hero-buttons {
+    display: flex !important;
+    gap: 15px !important;
+    flex-wrap: wrap !important;
+    justify-content: center !important;
+}
+</style>
 </head>
 <body>
     <!-- Header -->
