--- a/idea-generator.html
+++ b/idea-generator.html
@@ -127,7 +127,7 @@
                         "The Mingle Project's" important message.
                     </p>
                     <div class="cta-buttons">
-                        <a href="contact.html" class="btn-submit-idea">
+                        <a href="submit-idea.html" class="btn-submit-idea">
                             Submit Your Idea
                         </a>
                         <a href="mingle-project.html" class="btn-learn-more">
