--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
                 <h1 class="site-title">The Mingle Effect <span class="subtitle">(Ode to Michael)</span></h1>
                 <nav class="navigation">
                     <ul class="nav-menu">
-                        <li><a href="index.html" class="nav-link active">Home</a></li>
+                        <li><a href="index.html" class="nav-link">Home</a></li>
                         <li><a href="the-lyrics.html" class="nav-link">The Lyrics</a></li>
-                        <li><a href="#" class="nav-link" onclick="alert('Coming Soon!')">Who's Derek?</a></li>
-                        <li><a href="#" class="nav-link" onclick="alert('Coming Soon!')">Idea Generator</a></li>
-                        <li><a href="#" class="nav-link" onclick="alert('Coming Soon!')">Blog</a></li>
-                        <li><a href="#" class="nav-link" onclick="alert('Coming Soon!')">Contact</a></li>
+                        <li><a href="whos-derek.html" class="nav-link">Who's Derek?</a></li>
+                        <li><a href="idea-generator.html" class="nav-link active">Idea Generator</a></li>
+                        <li><a href="blog.html" class="nav-link">Blog</a></li>
+                        <li><a href="contact.html" class="nav-link">Contact</a></li>
                     </ul>
                 </nav>
             </div>
