--- a/the-lyrics.html
+++ b/the-lyrics.html
@@ -17,9 +17,9 @@
                 <nav class="navigation">
                     <ul class="nav-menu">
                         <li><a href="index.html" class="nav-link">Home</a></li>
-                        <li><a href="the-lyrics.html" class="nav-link active">The Lyrics</a></li>
+                        <li><a href="the-lyrics.html" class="nav-link">The Lyrics</a></li>
                         <li><a href="whos-derek.html" class="nav-link">Who's Derek?</a></li>
-                        <li><a href="idea-generator.html" class="nav-link">Idea Generator</a></li>
+                        <li><a href="idea-generator.html" class="nav-link active">Idea Generator</a></li>
                         <li><a href="blog.html" class="nav-link">Blog</a></li>
                         <li><a href="contact.html" class="nav-link">Contact</a></li>
                     </ul>
