--- a/michael-smerconish.html
+++ b/michael-smerconish.html
@@ -71,7 +71,7 @@
                             <h3>The Mingle Movie</h3>
                             <p class="video-intro">Michael's complete presentation on The Mingle Project</p>
                             <div class="video-container">
-                                <iframe width="1497" height="842" src="https://www.youtube.com/embed/0Hx9NRR8Z3s" title="The Mingle Movie (Feature Film)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <iframe src="https://www.youtube.com/embed/0Hx9NRR8Z3s" title="The Mingle Movie (Feature Film)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                             </div>
                             <p class="video-description">
                                 In this compelling presentation, Michael traces his journey from radio host to social 
