--- a/michael-smerconish.html
+++ b/michael-smerconish.html
@@ -70,8 +70,8 @@
                         <div class="video-showcase">
                             <h3>The Mingle Movie</h3>
                             <p class="video-intro">Michael's complete presentation on The Mingle Project</p>
-                            <div class="smerconish-video-container">
-                                <iframe src="https://www.youtube.com/embed/0Hx9NRR8Z3s" title="The Mingle Movie (Feature Film)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <div class="smerconish-video-container" style="position: relative !important; width: 100% !important; height: 0 !important; padding-bottom: 56.25% !important; margin-bottom: 1.5rem; border-radius: 15px; overflow: hidden; box-shadow: 0 15px 35px rgba(0, 0, 0, 0.3);">
+                                <iframe src="https://www.youtube.com/embed/0Hx9NRR8Z3s" title="The Mingle Movie (Feature Film)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="position: absolute !important; top: 0 !important; left: 0 !important; width: 100% !important; height: 100% !important;"></iframe>
                             </div>
                             <p class="video-description">
                                 In this compelling presentation, Michael traces his journey from radio host to social 
@@ -246,7 +246,7 @@
                 <div class="platforms-grid">
                     <div class="platform-card">
                         <div class="platform-logo">
-                            <img src="images/cnn-logo.png" alt="CNN" class="platform-img">
+                            <div class="platform-icon">📺</div>
                         </div>
                         <div class="platform-info">
                             <h3>CNN Smerconish</h3>
@@ -258,7 +258,7 @@
                     
                     <div class="platform-card">
                         <div class="platform-logo">
-                            <img src="images/siriusxm-logo.png" alt="SiriusXM" class="platform-img">
+                            <div class="platform-icon">📻</div>
                         </div>
                         <div class="platform-info">
                             <h3>The Michael Smerconish Program</h3>
@@ -350,6 +350,5 @@
     </footer>
 
     <script src="js/main.js"></script>
-    <script src="js/michael-smerconish.js"></script>
 </body>
 </html>
