--- a/michael-smerconish.html
+++ b/michael-smerconish.html
@@ -70,9 +70,9 @@
                         <div class="video-showcase">
                             <h3>The Mingle Movie</h3>
                             <p class="video-intro">Michael's complete presentation on The Mingle Project</p>
-                            <div class="video-wrapper-fixed" style="width: 500px; height: 280px; margin: 0 auto; background: #000; border-radius: 15px; overflow: hidden; box-shadow: 0 15px 35px rgba(0, 0, 0, 0.3);">
-                                <div class="smerconish-video-container" style="position: relative !important; width: 100% !important; height: 100% !important; padding-bottom: 0 !important; margin-bottom: 0;">
-                                    <iframe src="https://www.youtube.com/embed/0Hx9NRR8Z3s" title="The Mingle Movie (Feature Film)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="position: absolute !important; top: 0 !important; left: 0 !important; width: 100% !important; height: 100% !important;"></iframe>
+                            <div class="video-wrapper-fixed">
+                                <div class="smerconish-video-container">
+                                    <iframe src="https://www.youtube.com/embed/0Hx9NRR8Z3s" title="The Mingle Movie (Feature Film)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 </div>
                             </div>
                             <p class="video-description">
