--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,7 @@
                         <li><a href="mingle-project.html" class="nav-link">The Mingle Project</a></li>
                         <li><a href="michael-smerconish.html" class="nav-link">Michael Smerconish</a></li>
                         <li><a href="blog.html" class="nav-link active">Blog</a></li>
-                        <li><a href="#" class="nav-link" onclick="alert('Coming Soon!')">Contact</a></li>
+                        <li><a href="contact.html" class="nav-link" onclick="alert('Coming Soon!')">Contact</a></li>
                     </ul>
                 </nav>
             </div>
