--- a/mingle-project.html
+++ b/mingle-project.html
@@ -19,9 +19,10 @@
                         <li><a href="index.html" class="nav-link">Home</a></li>
                         <li><a href="the-lyrics.html" class="nav-link">The Lyrics</a></li>
                         <li><a href="whos-derek.html" class="nav-link">Who's Derek?</a></li>
-                        <li><a href="mingle-project.html" class="nav-link active">The Mingle Project</a></li>
-                        <li><a href="#" class="nav-link" onclick="alert('Coming Soon!')">Blog</a></li>
-                        <li><a href="#" class="nav-link" onclick="alert('Coming Soon!')">Contact</a></li>
+                        <li><a href="mingle-project.html" class="nav-link">The Mingle Project</a></li>
+                        <li><a href="michael-smerconish.html" class="nav-link">Michael Smerconish</a></li>
+                        <li><a href="blog.html" class="nav-link active">Blog</a></li>
+                        <li><a href="contact.html" class="nav-link" onclick="alert('Coming Soon!')">Contact</a></li>
                     </ul>
                 </nav>
             </div>
