--- a/michael-smerconish.html
+++ b/michael-smerconish.html
@@ -20,9 +20,9 @@
                         <li><a href="the-lyrics.html" class="nav-link">The Lyrics</a></li>
                         <li><a href="whos-derek.html" class="nav-link">Who's Derek?</a></li>
                         <li><a href="mingle-project.html" class="nav-link">The Mingle Project</a></li>
-                        <li><a href="michael-smerconish.html" class="nav-link active">Michael Smerconish</a></li>
-                        <li><a href="#" class="nav-link" onclick="alert('Coming Soon!')">Blog</a></li>
-                        <li><a href="#" class="nav-link" onclick="alert('Coming Soon!')">Contact</a></li>
+                        <li><a href="michael-smerconish.html" class="nav-link">Michael Smerconish</a></li>
+                        <li><a href="blog.html" class="nav-link">Blog</a></li>
+                        <li><a href="contact.html" class="nav-link">Contact</a></li>
                     </ul>
                 </nav>
             </div>
