--- a/blog-article-ai-youth.html
+++ b/blog-article-ai-youth.html
@@ -56,7 +56,7 @@
 
                 <!-- Featured Image -->
                 <div class="article-image">
-                    <img src="images/blog-pic-1.jpg" alt="Children using technology - AI impact on youth" class="article-img">
+                    <img src="images/blog1-pic1.jpg" alt="Children using technology - AI impact on youth" class="article-img">
                 </div>
 
                 <!-- Article Content -->
