--- a/blog-article-ai-youth.html
+++ b/blog-article-ai-youth.html
@@ -54,9 +54,13 @@
                     </p>
                 </header>
 
-                <!-- Featured Image -->
+                <!-- Featured Video -->
                 <div class="article-image">
-                    <img src="blog1-pic1.mp4" alt="Children using technology - AI impact on youth" class="article-img">
+                    <video class="article-img" autoplay muted loop playsinline>
+                        <source src="blog1-pic1.mp4" type="video/mp4">
+                        <img src="images/blog-pic-1.jpg" alt="Children using technology - AI impact on youth" class="article-img">
+                        Your browser does not support the video tag.
+                    </video>
                 </div>
 
                 <!-- Article Content -->
