--- a/blog-article-community.html
+++ b/blog-article-community.html
@@ -62,7 +62,7 @@
 
                 <!-- Featured Image -->
                 <div class="article-image">
-                    <img src="images/blog-pic-2.jpg" alt="People connecting face-to-face in a community setting" class="article-img">
+                    <img src="blog2-pic-2.jpg" alt="People connecting face-to-face in a community setting" class="article-img">
                 </div>
 
                 <!-- Article Content -->
