Update book website link in whos-derek.html

--- a/whos-derek.html
+++ b/whos-derek.html
@@ -157,7 +157,7 @@
                             <p>After 10 months of 12-hour days, Derek completed a 506-page novel. A one-man show doing everything from writing to cover art and layout.</p>
                             <div class="book-preview">
                                 <div class="book-cover-placeholder">
-                                    <a href="https://www.aletterguideforrebecca.com" target="_blank" rel="noopener noreferrer" title="Visit A Letter Guide For Rebecca website">
+                                    <a href="https://aletterguideforrebecca.com" target="_blank" rel="noopener noreferrer" title="Visit A Letter Guide For Rebecca website">
                                         <img src="images/book-cover.jpg" alt="A Letter Guide For Rebecca - Click to visit website" class="book-img-large">
                                     </a>
                                 </div>
